--- a/TODO
+++ b/TODO
@@ -3,9 +3,18 @@
 * Stream:foreach() cannot be interrupted
   Perhaps C core should export an interrupted variable that we can check from Lua.
   For Stream:play() this is solved differently.
+* The MIDIStream should be flushed when starting via Stream:play().
+* There are lots of limitations with Jupyter servers (see README).
 
 # Features
 
+* RTNeural support. Should probably be a separate library or an optional dependency.
+  This is important to justify the thesis as related to AI.
+  Since it is a C++ library making extensive use of templates, there will have to be
+  a small C wrapper.
+  Since build time options are important (to choose the backend), it will have to be
+  added as a submodule.
+  Port the official RTNeural-example to Applause.
 * Real-time input. See inputstream branch.
 * Line Continuations on the CLI (like Lua's CLI)
 * CLI auto completions via libreadline.
@@ -30,6 +39,7 @@
 * Github pages (LDoc documentation).
   They can be automatically pushed by a Github action.
   Since they will always be public, copyright questions should be resolved first.
+* Allow limited operation without a running Jack server.
 
 # Improvements
 
